--- a/docs/v0.1.0/en/components/basic/image.mdx
+++ b/docs/v0.1.0/en/components/basic/image.mdx
@@ -15,7 +15,7 @@ Please make sure the image address exists before use. Use the `dep` built-in fun
 <image src="dep('crate://self/resources/genui.png')"></image>
 ```
 
-## Attributes
+## Props
 
 | Name             | Description            | Type             |
 | ---------------- | ---------------------- | ---------------- |
