--- a/docs/v0.1.0/en/components/basic/svg.mdx
+++ b/docs/v0.1.0/en/components/basic/svg.mdx
@@ -12,7 +12,7 @@ Make sure the icon address exists before use. Use the `dep` built-in function to
 <svg src="dep('crate://self/resources/genui.svg')"></svg>
 ```
 
-## Attributes
+## Props
 
 | Name                 | Description                | Type             |
 | -------------------- | -------------------------- | ---------------- |
