--- a/docs/v0.1.0/en/components/form/input.mdx
+++ b/docs/v0.1.0/en/components/form/input.mdx
@@ -74,6 +74,6 @@ Input characters through the mouse or keyboard
 | ------------------- | ------------------------- | -------------------- |
 | `changed`           | Input value change event  | `GInputChangedParam` |
 | `keydown_unhandled` | Unhandled key press event | `KeyEvent`           |
-| `escaped`           | Esc key press event       | `_`                  |
-| `key_focus`         | Get keyboard focus event  | `_`                  |
-| `key_focus_lost`    | Lose keyboard focus event | `_`                  |
+| `escaped`           | Esc key press event       | `KeyEvent`           |
+| `key_focus`         | Get keyboard focus event  | `KeyFocusEvent`      |
+| `key_focus_lost`    | Lose keyboard focus event | `KeyFocusEvent`      |
