--- a/docs/v0.1.0/zh/components/basic/button.mdx
+++ b/docs/v0.1.0/zh/components/basic/button.mdx
@@ -65,3 +65,7 @@
 | `clicked`    | 点击事件         | `GButtonClickedParam` |
 | `focus`      | 获取焦点事件     | `GButtonFocusParam`   |
 | `focus_lost` | 失去焦点事件     | `GButtonFocusLostParam` |
+
+## 插槽
+
+- slot
