--- a/docs/v0.1.0/zh/doc/tutorial/quick-start.mdx
+++ b/docs/v0.1.0/zh/doc/tutorial/quick-start.mdx
@@ -92,7 +92,7 @@ import { Tab, Tabs } from 'rspress/theme';
 
 运行`ract create`命令，Ract会自动帮您检测环境，当所有工具链完整时，Ract会帮助您构建一个项目
 
-Ract会提示您相关的工具链的缺失，如果您的工具链不完整，可以直接使用`ract install`命令进行响应的安装
+Ract会提示您相关的工具链的缺失，如果您的工具链不完整，可以直接使用`ract install`命令进行相应的安装
 
 > [!TIP]
 > 
