add computed, router.toml in project struct

--- a/docs/v0.1.0/en/doc/tutorial/project-structure.mdx
+++ b/docs/v0.1.0/en/doc/tutorial/project-structure.mdx
@@ -27,7 +27,8 @@ The GenUI project adopts a typical Rust Workspace structure, consisting of multi
 │   │   ├── hello.gen          // Hello component
 │   │   ├── easy.gen           // Easy component
 │   │   └── mod.gen            // Component export mod file
-│   ├── .gen_ui_cache/         // Cache files
+│   ├── .gen_ui_cache          // Cache files
+│   ├── [router.toml]          // router configuration
 │   ├── Cargo.toml             // Rust package configuration file
 │   └── gen_ui.toml            // GenUI project configuration file
 │
