--- a/docs/v0.1.0/en/doc/tutorial/quick-start.mdx
+++ b/docs/v0.1.0/en/doc/tutorial/quick-start.mdx
@@ -9,7 +9,7 @@ This is a quick start example, through which you can quickly understand the deve
 | Name | Version |
 | ---- | ------- |
 | Mac  | -       |
-| Ract | 0.1.6+  |
+| Ract | 0.1.8+  |
 
 > [!TIP]
 >
@@ -21,13 +21,15 @@ This is a quick start example, through which you can quickly understand the deve
 
 > 👍 crates.io: https://crates.io/crates/ract
 >
+> Regardless of your system, installing with cargo is always the preferred way.
+>
 > Releases: https://github.com/Privoce/ract/releases
 
 > [!WARNING]
 >
 > Your computer may prompt security issues, please select Allow
 
-You can configure ract as a global command in the following ways:
+You can install or configure `Ract` as a global command in the following ways:
 
 <Tabs>
     <Tab label="cargo">
