--- a/docs/v0.1.0/en/tools/ract/install.mdx
+++ b/docs/v0.1.0/en/tools/ract/install.mdx
@@ -10,7 +10,7 @@ We have released it to `crate.io`, so you can also install it directly using car
 
 > [!NOTE]
 >
-> Although you may find that the current `Ract` version on `crate.io` is `v0.1.2`, it is actually `v0.1.1` released on Github
+> `Ract` has been released `v0.1.8`
 
 ```shell
 cargo install ract
