--- a/docs/v0.1.0/zh/doc/tutorial/quick-start.mdx
+++ b/docs/v0.1.0/zh/doc/tutorial/quick-start.mdx
@@ -9,7 +9,7 @@ import { Tab, Tabs } from 'rspress/theme';
 |名称|版本|
 |--|--|
 |Mac|-|
-|Ract|0.1.6+|
+|Ract|0.1.8+|
 
 > [!TIP]
 >
@@ -19,7 +19,9 @@ import { Tab, Tabs } from 'rspress/theme';
 
 `Ract`是您开启GenUI之路的第一步，请选择最新的版本进行下载
 
-> 👍 crates.io: https://crates.io/crates/ract
+> 👍 crates.io: https://crates.io/crates/ract 
+>
+> 无论您使用什么系统，使用`cargo`安装总是首选的
 >
 > Releases: https://github.com/Privoce/ract/releases
 
@@ -27,7 +29,7 @@ import { Tab, Tabs } from 'rspress/theme';
 > 
 > 您的计算机可能会提示安全问题，请选择允许
 
-您可以通过以下方式将 ract 配置为全局命令：
+您可以通过以下方式将`Ract`进行安装或配置为全局命令：
 
 <Tabs>
     <Tab label="cargo">
