--- a/docs/v0.1.0/zh/tools/ract/install.mdx
+++ b/docs/v0.1.0/zh/tools/ract/install.mdx
@@ -10,7 +10,7 @@ import { Tab, Tabs } from 'rspress/theme';
 
 > [!NOTE]
 >
-> 虽然在`crate.io`上您可能发现当前的`Ract`版本为`v0.1.2`但实际上就是Github上发布的`v0.1.1`
+> `Ract` 已经发布了`0.1.8`版本
 
 ```shell
 cargo install ract
