--- a/docs/v0.1.0/zh/doc/tutorial/template/basic.mdx
+++ b/docs/v0.1.0/zh/doc/tutorial/template/basic.mdx
@@ -205,3 +205,24 @@ import { Tab, Tabs } from "rspress/theme";
 > 回调中可能没有任何参数，但依然需要添加`()`
 >
 > 若组件使用了回调一定要添加`id`作为标识符
+
+### 自动 ID 策略
+
+自 `v0.1.2` 起，GenUI 引入了**自动 ID 分配策略**。在组件构建过程中，系统会自动检查每个组件是否已显式指定 `id`，若未指定，则会为其生成一个随机的唯一 ID。
+
+这一机制在多个场景下都极为有用，包括：
+
+- 属性绑定（`:prop="..."`）  
+- 事件回调（`@event="..."`）  
+- 计算属性关联  
+- 各类语法糖处理
+
+自动 ID 的引入极大地减少了手动管理标识符的繁琐，提高了模板代码的简洁性和可维护性。
+
+#### ID 生成规则
+
+我们并未采用 `ulid` 或其他第三方库，而是根据以下自定义策略生成 ID：
+
+1. **以英文字母开头**：确保符合变量命名规范，避免潜在语法冲突。  
+2. **长度限制**：ID 长度控制在 `6 ~ 12` 个字符之间，避免过短冲突或过长冗余。  
+3. **字符组成**：仅包含**英文字母与数字**，不含特殊字符，以保持兼容性和可读性。
